Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,7 @@ a:hover,a:focus {
 	width: 100%;
 }
 
-.oneline {
+.oneline a {
   vertical-align: text-bottom;
 }
 
